--- a/folio-app/package.json
+++ b/folio-app/package.json
@@ -12,8 +12,10 @@
     "@clerk/nextjs": "^6.35.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "pg": "^8.16.3",
