--- a/folio-app/package.json
+++ b/folio-app/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.35.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
